<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--제목입력 레이아웃-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title"
            />
        <EditText
            android:id="@+id/edit_input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_title"
            />

    </LinearLayout>
    <!--소재설정 버튼 레이아웃-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btn_resource_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_resource_setting"
            />

    </LinearLayout>
    <!--스토리 만들기 버튼 레이아웃-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btn_making_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_making_story"
            />

    </LinearLayout>


</LinearLayout>