<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/dialog_width_medium"
    android:layout_height="wrap_content">
    <!--input-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/horizontal_margin_activity"
        android:layout_marginRight="@dimen/horizontal_margin_activity"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_input_sentence"
            />
        <EditText
            android:id="@+id/edit_input_sentence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/alert_light_frame"
            />

    </LinearLayout>
    <!--button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btn_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_input"
            />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cancel"
            />

    </LinearLayout>
</LinearLayout>