<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/general_dialog_width"
    android:layout_height="@dimen/add_dialog_height">

    <LinearLayout
        android:id="@+id/layout_resource_input"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_name"
                android:textSize="@dimen/dialog_content_text_size"
                android:layout_marginLeft="@dimen/horizontal_margin_activity"
                />
            <EditText
                android:id="@+id/edit_res_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/horizontal_margin_activity"
                android:hint="@string/hint_input_res_name"
                android:background="@null"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_priority"
                android:textSize="@dimen/dialog_content_text_size"
                android:layout_marginLeft="@dimen/horizontal_margin_activity"
                />
            <ImageButton
                android:id="@+id/img_btn_star_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selecter_btn_star"
                android:layout_marginLeft="@dimen/horizontal_margin_activity"
                />
            <ImageButton
                android:id="@+id/img_btn_star_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selecter_btn_star"
                android:layout_marginLeft="@dimen/horizontal_margin_activity"
                />
            <ImageButton
                android:id="@+id/img_btn_star_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selecter_btn_star"
                android:layout_marginLeft="@dimen/horizontal_margin_activity"
                />
            <ImageButton
                android:id="@+id/img_btn_star_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selecter_btn_star"
                android:layout_marginLeft="@dimen/horizontal_margin_activity"
                />
            <ImageButton
                android:id="@+id/img_btn_star_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selecter_btn_star"
                android:layout_marginLeft="@dimen/horizontal_margin_activity"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_comment"
                android:textSize="@dimen/dialog_content_text_size"
                android:layout_marginLeft="@dimen/horizontal_margin_activity"
                />
            <EditText
                android:id="@+id/edit_res_comment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/horizontal_margin_activity"
                android:hint="@string/hint_input_res_comment"
                android:background="@null"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_register"
                />
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cancel"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>